--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ stages:
               artifactName: 'files'  # Replace with your desired artifact name
               publishLocation: 'pipeline'
           
-      
+       
 
   - stage: Get_Upload_URL
     displayName: 'Get Upload URL'
@@ -73,7 +73,9 @@ stages:
         pool:
           vmImage: 'ubuntu-latest'
         steps:
+          - checkout: self
           - script: |
+              echo $(uploadURL)  # Verify the value of the uploadURL variable
               curl -v -X PUT "$(uploadURL)" \
                 --header "x-ms-meta-x_rdp_userroles: systemadmin" \
                 --header "x-ms-meta-x_rdp_tenantid: etronds" \
