--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,118 +1,130 @@
 trigger:
   branches:
     include:
-      - main  # Replace with your target branch name
+      - main
 
 variables:
-  ZIP_NODE: 'rock-entity-header_product_thing_uiConfig.json'  # Replace with your desired file name
+  ZIP_NODE: ${{ format('{0}.zip', variables['Build.SourceBranchName']) }}
+  ZIP_WORKFLOW: postdeployment.zip
+  JSON_INCLUDE_FILE_PATH: '$(Pipeline.Workspace)/deployment-artifacts/includedfile.json'
+  ZIP_FILE_PATH: '$(Pipeline.Workspace)/$(ZIP_NODE)'
+  ZIP_WORKFLOW_FILE_PATH: '$(Pipeline.Workspace)/$(ZIP_WORKFLOW)'
 
 stages:
-  - stage: Publish_Zip_File
-    displayName: 'Publish Zip File'
+  - stage: Initialization
+    displayName: 'Initialization'
     jobs:
-      - job: Publish_Zip_File_Job
-        displayName: 'Publish Zip File'
-        pool:
-          vmImage: 'ubuntu-latest'
+      - job: InitializationJob
+        displayName: 'Initialization'
         steps:
-          - checkout: self
-
-          - task: ArchiveFiles@2
-            inputs:
-              rootFolderOrFile: '10-json/110-uiconfig/1106-entitytype/$(ZIP_NODE)'  # Replace with the path to your folder in the repository
-              includeRootFolder: true
-              archiveType: 'zip'
-              archiveFile: '$(Build.ArtifactStagingDirectory)/files.zip'
-
-          - task: PublishPipelineArtifact@1
-            inputs:
-              targetPath: '$(Pipeline.Workspace)'
-              artifactName: 'files.zip'  # Replace with your desired artifact name
-              publishLocation: 'pipeline'
-          
-        
-
-  - stage: Get_Upload_URL
-    displayName: 'Get Upload URL'
-    jobs:
-      - job: Get_Upload_URL_Job
-        displayName: 'Get Upload URL'
-        pool:
-          vmImage: 'ubuntu-latest'
-        steps:
-          - checkout: self
-
           - script: |
-              # Generate the authToken
-              currentTime=$(date -u +"%Y-%m-%dT%H:%M:%S")
-              request="POST https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload"
-              clientId="rdpclient"  # Replace with your clientId
-              userId="etronds.systemadmin@riversand.com"  # Replace with your userId
-              clientAuthKey="J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB"  # Replace with your clientAuthKey
-              signature=$(echo -n "$request&timeStamp=$currentTime" | openssl dgst -binary -sha256 -hmac "$clientAuthKey" | openssl base64 -e)
-              authToken="$clientId,$userId,$signature"
-    
-              # Make the API request to prepare the upload and extract the upload URL
-              prepareUploadResponse=$(curl -X POST \
-                -H "Content-Type: application/json" \
-                -H "Authorization: $authToken" \
-                -d '{}' \
+              echo "ZIP_NODE: $(ZIP_NODE)"
+              echo "ZIP_WORKFLOW: $(ZIP_WORKFLOW)"
+              echo "JSON_INCLUDE_FILE_PATH: $(JSON_INCLUDE_FILE_PATH)"
+              echo "ZIP_FILE_PATH: $(ZIP_FILE_PATH)"
+              echo "ZIP_WORKFLOW_FILE_PATH: $(ZIP_WORKFLOW_FILE_PATH)"
+            displayName: 'Initialization'
+
+  - stage: prepare-package
+    displayName: 'Prepare Package'
+    jobs:
+      - job: PreparePackageJob
+        displayName: 'Prepare Package'
+        steps:
+          - script: |
+              includedfile=""
+              includedFilenamesString=$(cat "$(JSON_INCLUDE_FILE_PATH)")
+              IFS=',' read -ra filenames <<< "$includedFilenamesString"
+              for filename in "${filenames[@]}"; do
+                includedfile+="'$(Pipeline.Workspace)/$filename',"
+              done
+              includedfile=${includedfile%?}
+
+              echo "Final included files: $includedfile"
+              echo "Filenames processed successfully... Moving to zipping.."
+
+              rm -f "$(ZIP_FILE_PATH)"
+              zip -r "$(ZIP_FILE_PATH)" $includedfile
+
+              if [ ! -f "$(ZIP_FILE_PATH)" ]; then
+                echo "Failed to create the zip file."
+                exit 1
+              else
+                echo "Files zipped successfully..."
+              fi
+            displayName: 'Prepare Package'
+
+  - stage: creating-folder
+    displayName: 'Creating Folder'
+    jobs:
+      - job: CreatingFolderJob
+        displayName: 'Creating Folder'
+        steps:
+          - script: |
+              jsonobject="{\"binaryStreamObject\":{\"id\":\"guid\",\"type\":\"seedDataStream\",\"properties\":{\"objectKey\":\"$(ZIP_NODE)\",\"originalFileName\":\"$(ZIP_NODE)\"}}}"
+              response=$(curl -X POST \
+                -H 'Content-Type: application/json' \
+                -H 'x-rdp-version: 8.1' \
+                -H 'x-rdp-tenantId: etronds' \
+                -H 'x-rdp-clientId: rdpclient' \
+                -H 'x-rdp-userId: etronds.systemadmin@riversand.com' \
+                -H 'x-rdp-userRoles: systemadmin' \
+                -H 'auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS' \
+                -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
+                -d "$jsonobject" \
                 'https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload')
 
-              # Extract the upload URL from the response
-              uploadURL=$(echo "$prepareUploadResponse" | jq -r '.response.binaryStreamObjects[0].properties.uploadURL')
+              fileuploadUrl=$(echo "$response" | jq -r '.response.binaryStreamObjects[].data[] | select(contains("uploadURL")) | ltrimstr("uploadURL=") | rtrimstr("}")]')
 
-              echo "##vso[task.setvariable variable=UPLOAD_URL]$uploadURL"
-            displayName: 'Get Upload URL'
+              echo "fileuploadUrl: $fileuploadUrl"
+            displayName: 'Creating Folder'
 
-  - stage: Deploy_File
-    displayName: 'Deploy File'
+  - stage: Deploying-folder
+    displayName: 'Deploying Folder'
     jobs:
-      - job: Deploy_File_Job
-        displayName: 'Deploy File'
-        pool:
-          vmImage: 'ubuntu-latest'
+      - job: DeployingFolderJob
+        displayName: 'Deploying Folder'
         steps:
-          - checkout: self
           - script: |
-              echo $UPLOAD_URL  # Verify the value of the UPLOAD_URL variable
-              curl -v -X PUT "$UPLOAD_URL" \
+              curl -v -X PUT "$fileuploadUrl" \
                 --header "x-ms-meta-x_rdp_userroles: systemadmin" \
                 --header "x-ms-meta-x_rdp_tenantid: etronds" \
-                --header "x-ms-meta-originalfilename: files.zip" \
-                --header "x-ms-blob-content-disposition: attachment; filename=files.zip" \
+                --header "x-ms-meta-originalfilename: $(ZIP_NODE)" \
+                --header "x-ms-blob-content-disposition: attachment; filename=$(ZIP_NODE)" \
                 --header "x-ms-meta-type: disposition" \
                 --header "x-ms-meta-x_rdp_clientid: rdpclient" \
                 --header "x-ms-meta-x_rdp_userid: etronds.systemadmin@riversand.com" \
                 --header "x-ms-meta-binarystreamobjectid: guid" \
                 --header "x-ms-blob-type: BlockBlob" \
                 --header "Content-Type: application/zip" \
-                --data-binary "@$(Pipeline.Workspace)/files.zip"
-        
-              echo "Folder deployed successfully."
-            displayName: 'Deploy Folder'
+                --data-binary "@$(ZIP_FILE_PATH)"
+            displayName: 'Deploying Folder'
 
-  - stage: Get_Details_From_Tenant
-    displayName: 'Get Details From Tenant'
+  - stage: Deployment-into-tenant
+    displayName: 'Deployment into Tenant'
     jobs:
-      - job: Get_Details_From_Tenant_Job
-        displayName: 'Get Details From Tenant'
-        pool:
-          vmImage: 'ubuntu-latest'
+      - job: DeploymentIntoTenantJob
+        displayName: 'Deployment into Tenant'
         steps:
           - script: |
-             jsonobject='{"adminObject":{"id":"someguid","type":"adminObject","properties":{"flushConfig":false,"storageType":"stream","objectKey":"files.zip","tenantId":"etronds","retryCount":1,"sleepTime":1000}}}'
-             deploymentResponse=$(curl -X POST \
-              -H 'Content-Type: application/json' \
-              -H 'x-rdp-version: 8.1' \
-              -H 'x-rdp-tenantId: etronds' \
-              -H 'x-rdp-clientId: rdpclient' \
-              -H 'x-rdp-userId: etronds.systemadmin@riversand.com' \
-              -H 'x-rdp-userRoles: systemadmin' \
-              -H 'auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS' \
-              -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
-              -d "$jsonobject" \
-              'https://etronds.riversand.com/api/adminservice/deploytenantseed')
+              jsonobject="{\"adminObject\":{\"id\":\"someguid\",\"type\":\"adminObject\",\"properties\":{\"flushConfig\":false,\"storageType\":\"stream\",\"objectKey\":\"$(ZIP_NODE)\",\"tenantId\":\"etronds\",\"retryCount\":1,\"sleepTime\":1000}}}"
+              response=$(curl -X POST \
+                -H 'Content-Type: application/json' \
+                -H 'x-rdp-version: 8.1' \
+                -H 'x-rdp-tenantId: etronds' \
+                -H 'x-rdp-clientId: rdpclient' \
+                -H 'x-rdp-userId: etronds.systemadmin@riversand.com' \
+                -H 'x-rdp-userRoles: systemadmin' \
+                -H 'auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS' \
+                -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
+                -d "$jsonobject" \
+                'https://etronds.riversand.com/api/adminservice/deploytenantseed')
 
-              echo "$deploymentResponse"
-            displayName: 'Deployment'
+              status=$(echo "$response" | jq -r '.response.status')
+              taskID=$(echo "$response" | jq -r '.response.statusDetail.taskId')
+              totalRecords=$(echo "$response" | jq -r '.response.totalRecords')
+
+              echo "Status: $status"
+              echo "Task ID: $taskID"
+              echo "Total Records: $totalRecords"
+            displayName: 'Deployment into Tenant'
