--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,130 +1,127 @@
 trigger:
   branches:
     include:
-      - main
-
-variables:
-  ZIP_NODE: ${{ format('{0}.zip', variables['Build.SourceBranchName']) }}
-  ZIP_WORKFLOW: postdeployment.zip
-  JSON_INCLUDE_FILE_PATH: '$(Pipeline.Workspace)/deployment-artifacts/includedfile.json'
-  ZIP_FILE_PATH: '$(Pipeline.Workspace)/$(ZIP_NODE)'
-  ZIP_WORKFLOW_FILE_PATH: '$(Pipeline.Workspace)/$(ZIP_WORKFLOW)'
+      - main  # Replace with your target branch name
 
 stages:
-  - stage: Initialization
-    displayName: 'Initialization'
+  - stage: Publish_Zip_File
+    displayName: 'Publish Zip File'
     jobs:
-      - job: InitializationJob
-        displayName: 'Initialization'
+      - job: Publish_Zip_File_Job
+        displayName: 'Publish Zip File'
         steps:
-          - script: |
-              echo "ZIP_NODE: $(ZIP_NODE)"
-              echo "ZIP_WORKFLOW: $(ZIP_WORKFLOW)"
-              echo "JSON_INCLUDE_FILE_PATH: $(JSON_INCLUDE_FILE_PATH)"
-              echo "ZIP_FILE_PATH: $(ZIP_FILE_PATH)"
-              echo "ZIP_WORKFLOW_FILE_PATH: $(ZIP_WORKFLOW_FILE_PATH)"
-            displayName: 'Initialization'
+          - checkout: self
 
-  - stage: Prepare_Package
-    displayName: 'Prepare Package'
+          - task: ArchiveFiles@2
+            inputs:
+              rootFolderOrFile: '10-json/110-uiconfig/1106-entitytype/rock-entity-header_product_thing_uiConfig.json'  # Replace with the path to your folder in the repository
+              includeRootFolder: true
+              archiveType: 'zip'
+              archiveFile: '$(Build.ArtifactStagingDirectory)/files.zip'
+
+          - task: PublishPipelineArtifact@1
+            inputs:
+              targetPath: '$(Pipeline.Workspace)'
+              artifactName: 'files.zip'  # Replace with your desired artifact name
+              publishLocation: 'pipeline'
+          
+        
+
+  
+  - stage: Generate_Auth_Token
+    displayName: 'Generate Auth Token'
     jobs:
-      - job: PreparePackageJob
-        displayName: 'Prepare Package'
+      - job: Generate_Auth_Token_Job
+        displayName: 'Generate Auth Token'
         steps:
+          - checkout: self
+
           - script: |
-              includedfile=""
-              includedFilenamesString=$(cat "$(JSON_INCLUDE_FILE_PATH)")
-              IFS=',' read -ra filenames <<< "$includedFilenamesString"
-              for filename in "${filenames[@]}"; do
-                includedfile+="'$(Pipeline.Workspace)/$filename',"
-              done
-              includedfile=${includedfile%?}
+              # Generate the authToken
+              currentTime=$(date -u +"%Y-%m-%dT%H:%M:%S")
+              request="POST https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload"
+              clientId="rdpclient"  # Replace with your clientId
+              userId="etronds.systemadmin@riversand.com"  # Replace with your userId
+              clientAuthKey="J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB"  # Replace with your clientAuthKey
+              signature=$(echo -n "$request&timeStamp=$currentTime" | openssl dgst -binary -sha256 -hmac "$clientAuthKey" | openssl base64 -e)
+              authToken="$clientId,$userId,$signature"
+    
+              echo "##vso[task.setvariable variable=authToken]$authToken"
+            displayName: 'Generate Auth Token'
 
-              echo "Final included files: $includedfile"
-              echo "Filenames processed successfully... Moving to zipping.."
-
-              rm -f "$(ZIP_FILE_PATH)"
-              zip -r "$(ZIP_FILE_PATH)" $includedfile
-
-              if [ ! -f "$(ZIP_FILE_PATH)" ]; then
-                echo "Failed to create the zip file."
-                exit 1
-              else
-                echo "Files zipped successfully..."
-              fi
-            displayName: 'Prepare Package'
-
-  - stage: Creating_Folder
-    displayName: 'Creating Folder'
+  - stage: Get_Upload_URL
+    displayName: 'Get Upload URL'
     jobs:
-      - job: CreatingFolderJob
-        displayName: 'Creating Folder'
+      - job: Get_Upload_URL_Job
+        displayName: 'Get Upload URL'
         steps:
+          - checkout: self
+
           - script: |
-              jsonobject="{\"binaryStreamObject\":{\"id\":\"guid\",\"type\":\"seedDataStream\",\"properties\":{\"objectKey\":\"$(ZIP_NODE)\",\"originalFileName\":\"$(ZIP_NODE)\"}}}"
-              response=$(curl -X POST \
-                -H 'Content-Type: application/json' \
-                -H 'x-rdp-version: 8.1' \
-                -H 'x-rdp-tenantId: etronds' \
-                -H 'x-rdp-clientId: rdpclient' \
-                -H 'x-rdp-userId: etronds.systemadmin@riversand.com' \
-                -H 'x-rdp-userRoles: systemadmin' \
-                -H 'auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS' \
-                -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
-                -d "$jsonobject" \
+              # Retrieve the authToken from the previous stage
+              authToken=$(echo "$authToken")
+
+              # Make the API request to prepare the upload and extract the upload URL
+              prepareUploadResponse=$(curl -X POST \
+                -H "Content-Type: application/json" \
+                -H "Authorization: $authToken" \
+                -d '{}' \
                 'https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload')
 
-              fileuploadUrl=$(echo "$response" | jq -r '.response.binaryStreamObjects[].data[] | select(contains("uploadURL")) | ltrimstr("uploadURL=") | rtrimstr("}")]')
+              # Extract the upload URL from the response
+              uploadURL=$(echo "$prepareUploadResponse" | jq -r '.response.binaryStreamObjects[0].properties.uploadURL')
 
-              echo "fileuploadUrl: $fileuploadUrl"
-            displayName: 'Creating Folder'
+              echo "##vso[task.setvariable variable=uploadURL]$uploadURL"
+            displayName: 'Get Upload URL'
 
-  - stage: Deploying_Folder
-    displayName: 'Deploying Folder'
+  - stage: Deploy_File
+    displayName: 'Deploy File'
     jobs:
-      - job: DeployingFolderJob
-        displayName: 'Deploying Folder'
+      - job: Deploy_File_Job
+        displayName: 'Deploy File'
         steps:
+          - checkout: self
           - script: |
-              curl -v -X PUT "$fileuploadUrl" \
+
+              echo $(uploadURL)  # Verify the value of the uploadURL variable
+              curl -v -X PUT "$(uploadURL)" \
+
                 --header "x-ms-meta-x_rdp_userroles: systemadmin" \
                 --header "x-ms-meta-x_rdp_tenantid: etronds" \
-                --header "x-ms-meta-originalfilename: $(ZIP_NODE)" \
-                --header "x-ms-blob-content-disposition: attachment; filename=$(ZIP_NODE)" \
+                --header "x-ms-meta-originalfilename: files.zip" \
+                --header "x-ms-blob-content-disposition: attachment; filename=files.zip" \
                 --header "x-ms-meta-type: disposition" \
                 --header "x-ms-meta-x_rdp_clientid: rdpclient" \
                 --header "x-ms-meta-x_rdp_userid: etronds.systemadmin@riversand.com" \
                 --header "x-ms-meta-binarystreamobjectid: guid" \
                 --header "x-ms-blob-type: BlockBlob" \
                 --header "Content-Type: application/zip" \
-                --data-binary "@$(ZIP_FILE_PATH)"
-            displayName: 'Deploying Folder'
 
-  - stage: Deployment_Into_Tenant
-    displayName: 'Deployment into Tenant'
+                --data-binary "@$(Pipeline.Workspace)/files.zip"
+        
+              echo "Folder deployed successfully."
+            displayName: 'Deploy Folder'
+
+  - stage: Get_Details_From_Tenant
+    displayName: 'Get Details From Tenant'
     jobs:
-      - job: DeploymentIntoTenantJob
-        displayName: 'Deployment into Tenant'
+      - job: Get_Details_From_Tenant_Job
+        displayName: 'Get Details From Tenant'
         steps:
           - script: |
-              jsonobject="{\"adminObject\":{\"id\":\"someguid\",\"type\":\"adminObject\",\"properties\":{\"flushConfig\":false,\"storageType\":\"stream\",\"objectKey\":\"$(ZIP_NODE)\",\"tenantId\":\"etronds\",\"retryCount\":1,\"sleepTime\":1000}}}"
-              response=$(curl -X POST \
-                -H 'Content-Type: application/json' \
-                -H 'x-rdp-version: 8.1' \
-                -H 'x-rdp-tenantId: etronds' \
-                -H 'x-rdp-clientId: rdpclient' \
-                -H 'x-rdp-userId: etronds.systemadmin@riversand.com' \
-                -H 'x-rdp-userRoles: systemadmin' \
-                -H 'auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS' \
-                -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
-                -d "$jsonobject" \
-                'https://etronds.riversand.com/api/adminservice/deploytenantseed')
 
-              status=$(echo "$response" | jq -r '.response.status')
-              taskID=$(echo "$response" | jq -r '.response.statusDetail.taskId')
-              totalRecords=$(echo "$response" | jq -r '.response.totalRecords')
+             jsonobject='{"adminObject":{"id":"someguid","type":"adminObject","properties":{"flushConfig":false,"storageType":"stream","objectKey":"files.zip","tenantId":"etronds","retryCount":1,"sleepTime":1000}}}'
+             deploymentResponse=$(curl -X POST \
+              -H 'Content-Type: application/json' \
+              -H 'x-rdp-version: 8.1' \
+              -H 'x-rdp-tenantId: etronds' \
+              -H 'x-rdp-clientId: rdpclient' \
+              -H 'x-rdp-userId: etronds.systemadmin@riversand.com' \
+              -H 'x-rdp-userRoles: systemadmin' \
+              -H 'auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS' \
+              -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
+              -d "$jsonobject" \
+              'https://etronds.riversand.com/api/adminservice/deploytenantseed')
 
-              echo "Status: $status"
-              echo "Task ID: $taskID"
-              echo "Total Records: $totalRecords"
-            displayName: 'Deployment into Tenant'
+              echo "$deploymentResponse"
+            displayName: 'Deployment'
