--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,18 +85,14 @@ stages:
 
               echo $(uploadURL)  # Verify the value of the uploadURL variable
               curl -v -X PUT "$(uploadURL)" \
-
-                --header "x-ms-meta-x_rdp_userroles: systemadmin" \
-                --header "x-ms-meta-x_rdp_tenantid: etronds" \
-                --header "x-ms-meta-originalfilename: files.zip" \
-                --header "x-ms-blob-content-disposition: attachment; filename=files.zip" \
-                --header "x-ms-meta-type: disposition" \
-                --header "x-ms-meta-x_rdp_clientid: rdpclient" \
-                --header "x-ms-meta-x_rdp_userid: etronds.systemadmin@riversand.com" \
-                --header "x-ms-meta-binarystreamobjectid: guid" \
-                --header "x-ms-blob-type: BlockBlob" \
-                --header "Content-Type: application/zip" \
-
+                -H 'Content-Type: application/json' \
+                -H 'x-rdp-version: 8.1' \
+                -H 'x-rdp-tenantId: etronds' \
+                -H 'x-rdp-clientId: rdpclient' \
+                -H 'x-rdp-userId: etronds.systemadmin@riversand.com' \
+                -H 'x-rdp-userRoles: systemadmin' \
+                -H 'auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS' \
+                -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
                 --data-binary "@$(Pipeline.Workspace)/files.zip"
         
               echo "Folder deployed successfully."
