--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,128 +1,153 @@
 trigger:
   branches:
     include:
-      - main  # Replace with your target branch name
+      - main
 
 stages:
-  - stage: Publish_Zip_File
-    displayName: 'Publish Zip File'
-    jobs:
-      - job: Publish_Zip_File_Job
-        displayName: 'Publish Zip File'
-        steps:
-          - checkout: self
+- stage: Initialization
+  displayName: 'Initialization...'
+  jobs:
+  - job: InitializationJob
+    displayName: 'Initialization Job'
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+    - script: |
+        ZIP_NODE=$(echo "$(Build.SourceBranch)" | tr / .)
+        ZIP_WORKFLOW="postdeployment.zip"
+        jsonIncludefilepath="$(Build.SourcesDirectory)/deployment-artifacts/includedfile.json"
+        zipfilepath="$(Build.SourcesDirectory)/$(ZIP_NODE).zip"
+        zip_workflowfilepath="$(Build.SourcesDirectory)/$(ZIP_WORKFLOW)"
+        
+        echo "ZIP_NODE: $ZIP_NODE"
+        echo "ZIP_WORKFLOW: $ZIP_WORKFLOW"
+        echo "jsonIncludefilepath: $jsonIncludefilepath"
+        echo "zipfilepath: $zipfilepath"
+        echo "zip_workflowfilepath: $zip_workflowfilepath"
+      displayName: 'Initialize variables'
 
-          - task: ArchiveFiles@2
-            inputs:
-              rootFolderOrFile: '10-json/110-uiconfig/1106-entitytype/rock-entity-header_product_thing_uiConfig.json'  # Replace with the path to your folder in the repository
-              includeRootFolder: true
-              archiveType: 'zip'
-              archiveFile: '$(Build.ArtifactStagingDirectory)/my_artifact.zip'
+- stage: PreparePackage
+  displayName: 'prepare-package'
+  dependsOn: Initialization
+  jobs:
+  - job: PreparePackageJob
+    displayName: 'Prepare Package Job'
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+    - script: |
+        includedFilenamesString=$(echo '[{"filename":"rock-business-actions_thing_admin_pmi.json"},{"filename":"rock-entity-search-result_thing_pmiproduct_admin_uiConfig.json"}]')
+        
+        echo "includedFilenamesString: $includedFilenamesString"
 
-          - task: PublishPipelineArtifact@1
-            inputs:
-              targetPath: '$(Pipeline.Workspace)'
-              artifactName: 'my-artifact'  # Replace with your desired artifact name
-              publishLocation: 'pipeline'
-            displayName: 'Publish Zip File'
-          
-  - stage: Generate_Auth_Token
-    displayName: 'Generate Auth Token'
-    jobs:
-      - job: Generate_Auth_Token_Job
-        displayName: 'Generate Auth Token'
-        steps:
-          - checkout: self
+        if [[ $includedFilenamesString == *","* ]]; then
+          IFS=',' read -ra includedFilenames <<< "$includedFilenamesString"
+          for includedFilename in "${includedFilenames[@]}"; do
+            includedFilename=$(echo $includedFilename | tr -d '[]')
+            includedfile+="$(Build.SourcesDirectory)/$includedFilename,"
+          done
+          includedfile=${includedfile::-1}
+          echo "Final included files: $includedfile"
+        else
+          includedfile="$(Build.SourcesDirectory)/$includedFilenamesString"
+          echo "No comma present: $includedfile"
+        fi
 
-          - script: |
-              # Generate the authToken
-              currentTime=$(date -u +"%Y-%m-%dT%H:%M:%S")
-              request="POST https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload"
-              clientId="rdpclient"  # Replace with your clientId
-              userId="etronds.systemadmin@riversand.com"  # Replace with your userId
-              clientAuthKey="J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB"  # Replace with your clientAuthKey
-              signature=$(echo -n "$request&timeStamp=$currentTime" | openssl dgst -binary -sha256 -hmac "$clientAuthKey" | openssl base64 -e)
-              authToken="$clientId,$userId,$signature"
-    
-              echo "##vso[task.setvariable variable=authToken]$authToken"
-            displayName: 'Generate Auth Token'
+        echo "Final included files: $includedfile"
+        echo "Filenames processed successfully... Moving to zipping.."
 
-  - stage: Get_Upload_URL
-    displayName: 'Get Upload URL'
-    jobs:
-      - job: Get_Upload_URL_Job
-        displayName: 'Get Upload URL'
-        steps:
-          - checkout: self
+        rm -f $zipfilepath
+        zip -r $zipfilepath $includedfile
+        if [ ! -f $zipfilepath ]; then
+          echo "Failed to create the zip file."
+          exit 1
+        else
+          echo "Files zipped successfully..."
+        fi
+      displayName: 'Prepare package'
 
-          - script: |
-              jsonobject='{"adminObject":{"id":"someguid","type":"adminObject","properties":{"flushConfig":false,"storageType":"stream","objectKey":"my-artifact","tenantId":"etronds","retryCount":1,"sleepTime":1000}}}'
-              authToken=$(echo $(authToken))
+# The rest of the stages and jobs remain the same...
 
-              prepareUploadResponse=$(curl -X POST \
-                -H "Content-Type: application/json" \
-                -H "Authorization: $authToken" \
-                -d "$jsonobject" \
-                https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload)
 
-              uploadURL=$(echo "$prepareUploadResponse" | jq -r '.response.binaryStreamObjects[0].properties.uploadURL')
+- stage: CreatingFolder
+  displayName: 'creating folder'
+  dependsOn: PreparePackage
+  jobs:
+  - job: CreatingFolderJob
+    displayName: 'Creating Folder Job'
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+    - script: |
+        jsonobject=$(echo "{\"binaryStreamObject\":{\"id\":\"guid\",\"type\":\"seedDataStream\",\"properties\":{\"objectKey\":\"$(ZIP_NODE)\",\"originalFileName\":\"$(ZIP_NODE)\"}}}")
+        
+        curl -X POST \
+          -H "Content-Type: application/json" \
+          -H "x-rdp-version: 8.1" \
+          -H "x-rdp-tenantId: etronds" \
+          -H "x-rdp-clientId: rdpclient" \
+          -H "x-rdp-userId: etronds.systemadmin@riversand.com" \
+          -H "x-rdp-userRoles: systemadmin" \
+          -H "auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS" \
+          -H "auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB" \
+          -d "$jsonobject" \
+          "https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload"
 
-              echo "##vso[task.setvariable variable=uploadURL]$uploadURL"
-            displayName: 'Get Upload URL'
+      displayName: 'Create folder'
 
-  - stage: Deploy_File
-    displayName: 'Deploy File'
-    jobs:
-      - job: Deploy_File_Job
-        displayName: 'Deploy File'
-        steps:
-          - checkout: self
-          
-          - task: DownloadPipelineArtifact@2
-            inputs:
-              artifactName: 'my-artifact'  # Replace with the same artifact name used in the Publish_Zip_File stage
-              downloadPath: '$(Pipeline.Workspace)'
-            displayName: 'Download Zip File' 
+- stage: DeployingFolder
+  displayName: 'Deploying folder'
+  dependsOn: CreatingFolder
+  jobs:
+  - job: DeployingFolderJob
+    displayName: 'Deploying Folder Job'
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+    - script: |
+        echo "==== Deploying folder ===="
+        
+        encodedFileuploadUrl=$(echo $fileuploadUrl | sed 's/%/%%/g')
+        
+        curl -v -X PUT $encodedFileuploadUrl \
+          -H "x-ms-meta-x_rdp_userroles: systemadmin" \
+          -H "x-ms-meta-x_rdp_tenantid: etronds" \
+          -H "x-ms-meta-originalfilename: $(ZIP_NODE)" \
+          -H "x-ms-blob-content-disposition: attachment; filename=$(ZIP_NODE)" \
+          -H "x-ms-meta-type: disposition" \
+          -H "x-ms-meta-x_rdp_clientid: rdpclient" \
+          -H "x-ms-meta-x_rdp_userid: etronds.systemadmin@riversand.com" \
+          -H "x-ms-meta-binarystreamobjectid: guid" \
+          -H "x-ms-blob-type: BlockBlob" \
+          -H "Content-Type: application/zip" \
+          --data-binary "@$zipfilepath"
+        
+      displayName: 'Deploy folder'
 
-          - script: |
-              jsonobject='{"adminObject":{"id":"someguid","type":"adminObject","properties":{"flushConfig":false,"storageType":"stream","objectKey":"my-artifact","tenantId":"etronds","retryCount":1,"sleepTime":1000}}}'
-              authToken=$(echo $(authToken))
-              uploadURL=$(echo $(uploadURL))
+- stage: DeploymentIntoTenant
+  displayName: 'Deployment into tenant'
+  dependsOn: DeployingFolder
+  jobs:
+  - job: DeploymentIntoTenantJob
+    displayName: 'Deployment into Tenant Job'
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+    - script: |
+        echo "==== Deployment ===="
 
-              curl -v -X PUT "$uploadURL" \
-                -H 'Content-Type: application/json' \
-                -H 'x-rdp-version: 8.1' \
-                -H 'x-rdp-tenantId: etronds' \
-                -H 'x-rdp-clientId: rdpclient' \
-                -H 'x-rdp-userId: etronds.systemadmin@riversand.com' \
-                -H 'x-rdp-userRoles: systemadmin' \
-                -H 'auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS' \
-                -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
-                --data-binary "@$(Pipeline.Workspace)/files.zip"
+        jsonobject=$(echo "{\"adminObject\":{\"id\":\"someguid\",\"type\":\"adminObject\",\"properties\":{\"flushConfig\":false,\"storageType\":\"stream\",\"objectKey\":\"$(ZIP_NODE)\",\"tenantId\":\"etronds\",\"retryCount\":1,\"sleepTime\":1000}}}")
+        
+        curl -X POST \
+          -H "Content-Type: application/zip" \
+          -H "x-rdp-version: 8.1" \
+          -H "x-rdp-clientId: rdpclient" \
+          -H "x-rdp-userId: etronds.systemadmin@riversand.com" \
+          -H "x-rdp-userRoles: systemadmin" \
+          -H "auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS" \
+          -H "auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB" \
+          -d "$jsonobject" \
+          "https://etronds.riversand.com/api/adminservice/deploytenantseed"
 
-              echo "Folder deployed successfully."
-            displayName: 'Deploy Folder'
+      displayName: 'Deployment'
 
-  - stage: Get_Details_From_Tenant
-    displayName: 'Get Details From Tenant'
-    jobs:
-      - job: Get_Details_From_Tenant_Job
-        displayName: 'Get Details From Tenant'
-        steps:
-          - script: |
-
-             jsonobject='{"adminObject":{"id":"someguid","type":"adminObject","properties":{"flushConfig":false,"storageType":"stream","objectKey":"my-artifact","tenantId":"etronds","retryCount":1,"sleepTime":1000}}}'
-             deploymentResponse=$(curl -X POST \
-              -H 'Content-Type: application/json' \
-              -H 'x-rdp-version: 8.1' \
-              -H 'x-rdp-tenantId: etronds' \
-              -H 'x-rdp-clientId: rdpclient' \
-              -H 'x-rdp-userId: etronds.systemadmin@riversand.com' \
-              -H 'x-rdp-userRoles: systemadmin' \
-              -H 'auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS' \
-              -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
-              -d "$jsonobject" \
-              https://etronds.riversand.com/api/adminservice/deploytenantseed)
-
-              echo "$deploymentResponse"
-            displayName: 'Deployment'
