--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,14 +37,10 @@ stages:
       vmImage: 'ubuntu-latest'
     steps:
     - script: |
-        ZIP_NODE=$(echo "$(Build.SourceBranch)" | tr / .)
-        ZIP_WORKFLOW="postdeployment.zip"
         jsonIncludefilepath="$(Build.SourcesDirectory)/deployment-artifacts/includedfile.json"
-        zipfilepath="$(Build.SourcesDirectory)/$(ZIP_NODE).zip"
-        zip_workflowfilepath="$(Build.SourcesDirectory)/$(ZIP_WORKFLOW)"
+        zipfilepath="$(Build.SourcesDirectory)/$(Build.SourceBranch | tr / .).zip"
+        zip_workflowfilepath="$(Build.SourcesDirectory)/postdeployment.zip"
 
-        echo "ZIP_NODE: $ZIP_NODE"
-        echo "ZIP_WORKFLOW: $ZIP_WORKFLOW"
         echo "jsonIncludefilepath: $jsonIncludefilepath"
         echo "zipfilepath: $zipfilepath"
         echo "zip_workflowfilepath: $zip_workflowfilepath"
@@ -102,7 +98,7 @@ stages:
       vmImage: 'ubuntu-latest'
     steps:
     - script: |
-        jsonobject=$(echo "{\"binaryStreamObject\":{\"id\":\"guid\",\"type\":\"seedDataStream\",\"properties\":{\"objectKey\":\"$(ZIP_NODE)\",\"originalFileName\":\"$(ZIP_NODE)\"}}}")
+        jsonobject=$(echo "{\"binaryStreamObject\":{\"id\":\"guid\",\"type\":\"seedDataStream\",\"properties\":{\"objectKey\":\"$(Build.SourceBranch | tr / .)\",\"originalFileName\":\"$(Build.SourceBranch | tr / .)\"}}}")
         
         curl -X POST \
           -H "Content-Type: application/json" \
@@ -118,8 +114,6 @@ stages:
       displayName: 'Creating folder'
 
 # The remaining stages and jobs continue...
-
-
 
 - stage: DeployingFolder
   displayName: 'Deploying folder'
@@ -138,8 +132,8 @@ stages:
         curl -v -X PUT $encodedFileuploadUrl \
           -H "x-ms-meta-x_rdp_userroles: systemadmin" \
           -H "x-ms-meta-x_rdp_tenantid: etronds" \
-          -H "x-ms-meta-originalfilename: $(ZIP_NODE)" \
-          -H "x-ms-blob-content-disposition: attachment; filename=$(ZIP_NODE)" \
+          -H "x-ms-meta-originalfilename: $(Build.SourceBranch | tr / .)" \
+          -H "x-ms-blob-content-disposition: attachment; filename=$(Build.SourceBranch | tr / .)" \
           -H "x-ms-meta-type: disposition" \
           -H "x-ms-meta-x_rdp_clientid: rdpclient" \
           -H "x-ms-meta-x_rdp_userid: etronds.systemadmin@riversand.com" \
@@ -162,7 +156,7 @@ stages:
     - script: |
         echo "==== Deployment ===="
 
-        jsonobject=$(echo "{\"adminObject\":{\"id\":\"someguid\",\"type\":\"adminObject\",\"properties\":{\"flushConfig\":false,\"storageType\":\"stream\",\"objectKey\":\"$(ZIP_NODE)\",\"tenantId\":\"etronds\",\"retryCount\":1,\"sleepTime\":1000}}}")
+        jsonobject=$(echo "{\"adminObject\":{\"id\":\"someguid\",\"type\":\"adminObject\",\"properties\":{\"flushConfig\":false,\"storageType\":\"stream\",\"objectKey\":\"$(Build.SourceBranch | tr / .)\",\"tenantId\":\"etronds\",\"retryCount\":1,\"sleepTime\":1000}}}")
         
         curl -X POST \
           -H "Content-Type: application/zip" \
