Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -86,7 +86,7 @@ stages:
                 --header "x-ms-meta-binarystreamobjectid: guid" \
                 --header "x-ms-blob-type: BlockBlob" \
                 --header "Content-Type: application/zip" \
-                --data-binary "@$(Build.ArtifactStagingDirectory)/my_artifact"
+                --data-binary "@$(Build.ArtifactStagingDirectory)/my_artifact/drop.zip"
 
               echo "Folder deployed successfully."
             displayName: 'Deploy Folder'
