--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,7 +87,7 @@ stages:
                 --header "x-ms-meta-binarystreamobjectid: guid" \
                 --header "x-ms-blob-type: BlockBlob" \
                 --header "Content-Type: application/zip" \
-                --data-binary "@$(Build.ArtifactStagingDirectory)/my_artifact/drop.zip"
+                --data-binary "@$(Build.ArtifactStagingDirectory)/my_artifact/"
 
               echo "Folder deployed successfully."
             displayName: 'Deploy Folder'
